Tests/project2/errors/commas.flm
/* This tests for missing commas */

fun foo()
    begin
    bar(a b, c)
    end


        
